<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#5b5656"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <ImageView
      android:layout_marginTop="80dp"
      android:layout_width="200dp"
      android:layout_height="140dp"
      android:src="@drawable/dog"
      android:contentDescription="@string/todo" />
  <TextView
      android:layout_marginVertical="20dp"
      android:textColor="@android:color/white"
      android:layout_marginTop="10dp"
      android:padding="10dp"
      android:textSize="22sp"
      android:id="@+id/myQuestion"
      android:text="@string/questionOne"
      android:layout_width="wrap_content"
      android:layout_height="100dp"/>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
     <Button
         android:padding="8sp"
         android:textColor="@android:color/white"
         android:layout_margin="5dp"
         android:background="#27ae60"
         android:textSize="20sp"
         android:id="@+id/true_button"
         android:text="@string/true_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
    <Button
        android:padding="8sp"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:background="#c0392b"
        android:textSize="20sp"
        android:id="@+id/false_button"
        android:text="@string/false_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
  </LinearLayout>
  <LinearLayout
     android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
  <ImageView
      android:contentDescription="@string/next_text"
      android:id="@+id/previous_button"
      android:layout_marginTop="20dp"
      android:padding="10sp"
      android:src="@drawable/back"
      android:layout_width="50dp"
      android:layout_height="50dp"/>
    <ImageView
        android:contentDescription="@string/next_text"
        android:id="@+id/next_button"
        android:layout_marginTop="20dp"
        android:padding="10sp"
        android:src="@drawable/go"
        android:layout_width="50dp"
        android:layout_height="50dp"/>
  </LinearLayout>
  <ImageView
      android:contentDescription="@string/result"
      android:id="@+id/result"
      android:layout_marginTop="20dp"
      android:padding="10sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
</LinearLayout>